--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.16.4",
     "mongoose": "^8.0.0",
     "next": "13.5.4",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
